# templates

./: LICENSE
C++/: CMakeLists.txt  main.cc  readme.org
C++/cmake/: toolchain-arm32.cmake  toolchain-arm64.cmake
orgmode/: beamer.org  note.org
